Montando a visualização das contas e incluindo a primeira conta Utilização de fragment para criar uma tela inicial que só aparece quando não existe nenhuma conta cadastrada.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#FF5733</color>
     <color name="colorPrimaryDark">#FF5733</color>
-    <color name="colorAccent">#FFC300</color>
+    <color name="colorAccent">#FF5733</color>
     <color name="backgrounPrimary">#FF5733</color>
     <color name="textWhite">#FFF</color>
     <color name="textBlack">#000</color>
