Ajustando o card para exibir conta e saldo

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="backgrounPrimary">#FF5733</color>
     <color name="textWhite">#FFF</color>
     <color name="textBlack">#000</color>
+    <color name="saldo_positivo">#0000FF</color>
+    <color name="saldo_negativo">#FF0000</color>
 </resources>
