--- a/app/src/main/res/layout/conta_celula.xml
+++ b/app/src/main/res/layout/conta_celula.xml
@@ -9,17 +9,30 @@
     app:cardUseCompatPadding="true"
     android:background="#ffffff">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="409dp"
-        android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="5dp"
-        tools:layout_editor_absoluteY="7dp">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/descricao_conta"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:paddingLeft="10dp"
+            android:text="Descrição"
+            android:fontFamily="sans-serif-medium"
+            android:textSize="15dp"/>
+        <TextView
+            android:id="@+id/saldo"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical|right"
+            android:paddingRight="30dp"
+            android:text="Saldo"
+            android:fontFamily="sans-serif-black"
+            android:textColor="@color/saldo_positivo"/>
+    </LinearLayout>
 
 </androidx.cardview.widget.CardView>
