--- a/app/src/main/res/layout/fragment_conta.xml
+++ b/app/src/main/res/layout/fragment_conta.xml
@@ -15,7 +15,7 @@
     </androidx.recyclerview.widget.RecyclerView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/incluirConta"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
