--- a/app/src/main/res/layout/activity_cadastro_conta.xml
+++ b/app/src/main/res/layout/activity_cadastro_conta.xml
@@ -45,7 +45,7 @@
         android:id="@+id/editTextSaldoInicial"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="numberDecimal"
+        android:inputType="numberSigned|numberDecimal"
         android:textColor="@color/textWhite"/>
 
     <Button
