--- a/app/src/main/res/layout/fragment_conta.xml
+++ b/app/src/main/res/layout/fragment_conta.xml
@@ -20,6 +20,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_input_add" />
+        android:onClick="cadastrarConta"
+        android:src="@android:drawable/ic_input_add"
+        tools:ignore="OnClick" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
